        Reviewed, tweaked and landed by Alexey.

- fix http://bugs.webkit.org/show_bug.cgi?id=17732

        We didn't have a fallback to frame encoding in the case of loading a script via
        changing its src attribute.

        Test: fast/dom/HTMLScriptElement/script-decoding-error-after-setting-src.html

        * html/HTMLScriptElement.cpp:
        (WebCore::HTMLScriptElement::parseMappedAttribute): Use a helper function to get proper
        charset for correct decoding of script content.
        (WebCore::HTMLScriptElement::insertedIntoDocument):
        (WebCore::HTMLScriptElement::scriptCharset): A helper function for getting proper charset
        for the script (as much as can be determined prior to loading it).
        * html/HTMLScriptElement.h:
        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::parseTag): Use a helper function to get proper charset for correct
        decoding of script content.



Canonical link: https://commits.webkit.org/24612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30928 268f45cc-cd09-0410-ab3c-d52691b4dbfc